<resources>
    <string name="app_name">Todo</string>
    <string name="title_placeholder">Title</string>
    <string name="sub_title">sub title</string>
    <string name="sample_date">04/10/2020</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="create_new_">Create New Tasks</string>
    <string name="topic">Title</string>
    <string name="description">Description</string>
    <string name="notification">Notification</string>
    <string name="drop_down_arrow">Drop down arrow</string>
    <string name="date">Date</string>


</resources>