<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:tag="cards main container">


    <androidx.cardview.widget.CardView
        android:id="@+id/row_card_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/row_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="100dp"
                android:layout_toEndOf="@id/row_checkbox"
                android:text="@string/title_placeholder"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/row_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/desc_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_text_view"
                android:layout_alignStart="@id/title_text_view"
                android:layout_marginEnd="100dp"
                android:text="@string/sub_title" />

            <TextView
                android:id="@+id/date_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="-90dp"
                android:layout_toEndOf="@id/title_text_view"
                android:text="@string/sample_date" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
